--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <div id="app">
     <h1>目次</h1>
-    <p>会場毎に参加者を登録します。</p>
+    <p>会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。ページを開くとカメラを許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
     <div>
-      <h2>イベント会場</h2>
+      <h2>イベント会場（受付）</h2>
       <ul>
         <li><a href="./event/1.html" target="_blank">イベント1</a></li>
         <li><a href="./event/2.html" target="_blank">イベント2</a></li>
