--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="app">
-    <h1>目次</h1>
+    <h1>QRコードWEB受付</h1>
     <p>会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
     <div>
       <h2>イベント会場（受付）</h2>
