--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div id="app">
     <h1>QRコードWEB受付</h1>
     <p>会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
+    <p>会場ごとに参加者のQRコードを読み取って、どのユーザーがどのイベント会場に参加したのかを調べることができます。</p>
     <div>
       <h2>イベント会場（受付）</h2>
       <ul>
