--- a/index.html
+++ b/index.html
@@ -1,31 +1,98 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-qrcode-reader@2.0.3/dist/vue-qrcode-reader.css">
-  <style>
-
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-lightbox@0.4.1/build/bootstrap-lightbox.min.css" rel="stylesheet" >
 </head>
 <body>
 <div id="app">
-    <h1>QRコードWEB受付</h1>
-    <p>会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
-    <p>会場ごとに参加者のQRコードを読み取って、どのユーザーがどのイベント会場に参加したのかを調べることができます。</p>
-    <div>
-      <h2>イベント会場（受付）</h2>
-      <ul>
-        <li><a href="./event/1.html" target="_blank">イベント1</a></li>
-        <li><a href="./event/2.html" target="_blank">イベント2</a></li>
-        <li><a href="./event/3.html" target="_blank">イベント3</a></li>
-      </ul>
+  <main class="mb-5">
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light mb-5">QRコードWEB受付</h1>
+                <div class="">
+                  <p class="lead text-muted">会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
+                  <p class="lead text-muted">会場ごとに参加者のQRコードを読み取って、どのユーザーがどのイベント会場に参加したのかを調べることができます。</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="py-5 bg-light text-center">
+      <div class="container">
+          <h2 class="pb-5">イベント会場（受付）</h2>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col-4">
+              <a href="./event/1.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>イベント1</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="./event/2.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>イベント2</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="./event/3.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>イベント3</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+          </div>
+      </div>
     </div>
-    <div>
-      <h2>参加者</h2>
-      <ul>
-        <li><a href="./user/1.html" target="_blank">ユーザー1</a></li>
-        <li><a href="./user/2.html" target="_blank">ユーザー2</a></li>
-        <li><a href="./user/3.html" target="_blank">ユーザー3</a></li>
-      </ul>
+    <div class="py-5  text-center">
+      <div class="container">
+          <h2 class="pb-5">参加者</h2>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col-4">
+              <a href="./user/1.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>ユーザー1</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="./user/2.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>ユーザー2</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="./user/3.html" target="_blank">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>ユーザー3</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+              </a>
+            </div>
+          </div>
+      </div>
     </div>
+  </main>
 </div>
 </body>
 </html>
