--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light mb-5">QRコードWEB受付</h1>
+                <h1 class="fw-light mb-5">QRコードWEB受付※スマホで開いてください</h1>
                 <div class="">
                   <p class="lead text-muted">会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
                   <p class="lead text-muted">会場ごとに参加者のQRコードを読み取って、どのユーザーがどのイベント会場に参加したのかを調べることができます。</p>
