--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light mb-5">QRコードWEB受付<br><small style="font-size: 0.5em;">※スマホで開いてください</small></h1>
+                <h1 class="fw-light mb-5">QRコードWEB受付</h1>
                 <div class="">
                   <p class="lead text-muted">会場毎に参加者を登録します。<br>「イベント会場（受付）」をカメラ付きのスマホ/PCで開いてください。<br>ページを開くとカメラの許可を求められるので、許可するとQRコードを読み込むことができるようになります。</p>
                   <p class="lead text-muted">会場ごとに参加者のQRコードを読み取って、どのユーザーがどのイベント会場に参加したのかを調べることができます。</p>
@@ -20,7 +20,7 @@
     </section>
     <div class="py-5 bg-light text-center">
       <div class="container">
-          <h2 class="pb-5">イベント会場（受付）</h2>
+          <h2 class="pb-5">イベント会場（受付）<br><small style="font-size: 0.5em;">※カメラ付きのスマホ/PCで開いてください</small></h2>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col-4">
               <a href="./event/1.html" target="_blank">
