--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="py-5  text-center">
       <div class="container">
-          <h2 class="pb-5">参加者</h2>
+          <h2 class="pb-5">参加者のQRコード（読み取り用）</h2>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col-4">
               <a href="./user/1.html" target="_blank">
